# smag

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: test.yml
src/: datastore.rs  main.rs  ringbuffer.rs  ui.rs
