[package]
name = "smag"
version = "0.5"
authors = ["Natan Yellin", "Tom Forbes <tom@tomforb.es>"]
edition = "2020"
repository = "https://github.com/orf/gping"
license = "MIT"
description = "Show Me A Graph - Command Line Graph Tool"

[dependencies]
structopt = "0.3.20"
tui = { version = "0.12.0", features = ["crossterm"], default_features = false }
# tui uses crossterm 0.17.7
crossterm = "0.17.7"
anyhow = "1.0.34"
histogram = "0.6.9"

[profile.release]
lto = true
